# hourtime

./: .gitignore  .nvim.lua  .ruff.toml  README.md  db_revision.py  main.py  pyproject.toml  version.py
front/: README.md  index.html  package-lock.json  package.json  vite.config.ts
front/src/: App.vue  main.ts  typed-router.d.ts
front/src/assets/: components.css  main.css  theme.css
front/src/components/: AppBar.vue  SideBar.vue
front/src/layouts/: auth.vue  default.vue
front/src/pages/: index.vue  login.vue  organizations.vue  projects.vue  tasks.vue
front/src/plugins/: i18n.ts  index.ts
front/src/router/: index.ts
migrations/: env.py
migrations/versions/: 2b16229b1d95_add_user_tokens.py  3437404451da_init.py  626b98421d07_add_workspace_in_task.py  e2415f42e6cf_add_projects_colors.py
src/: cache.py  cache_constants.py  config.py  exceptions.py  logger.py  utils.py
src/api/: __init__.py  app.py  depends.py  handlers.py
src/database/: __init__.py  converter.py
src/dto/: organization.py  project.py  task.py  time_entry.py  user.py  workspace.py
src/exceptions/: __init__.py  defined.py  types.py
src/models/: common.py  helpers.py  organization.py  project.py  task.py  time_entery.py  user.py  workspace.py
src/repository/: mixin.py  organization.py  project.py  task.py  time_entry.py  user.py  user_token.py  workspace.py
src/service/: organization.py  project.py  task.py  time_entry.py  user.py  user_auth.py  workspace.py
src/use_case/: organization.py  project.py  task.py  time_entry.py  user.py  user_tokens.py  workspace.py
(+68 files in other folders)
